# EnSim

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  verify_efficiency.py
.cursor/plans/: ensim_futuristic_ui_66266cc7.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  scientific_issue.yml
.github/workflows/: ci.yml  release.yml  test.yml
AUDIT_REPORT/: index.html
FLIGHT_VALIDATION/: index.html
THEORY/: index.html
VALIDATION/: index.html
api/: index.html
api/core/chemistry/: index.html
api/core/cooling/: index.html
api/core/optimization/: index.html
api/core/propulsion/: index.html
api/core/staging/: index.html
api/data/propellants/: index.html
api/utils/units/: index.html
assets/: style.qss  styles.qss
assets/styles/: aerospace.qss  pro.qss
docs/: AUDIT_REPORT.md  FLIGHT_VALIDATION.md  README.md  THEORY.md  VALIDATION.md  index.md
docs/api/: index.md
docs/api/core/: chemistry.md  cooling.md  optimization.md  propulsion.md  staging.md
docs/api/data/: propellants.md
docs/api/utils/: units.md
docs/getting-started/: index.md
docs/theory/: index.md
docs/user-guide/: index.md
examples/: h2_o2_vacuum.ensim  methalox_sealevel.ensim  rp1_lox_merlin.ensim
getting-started/: index.html
scripts/: capture_screenshots.py  comprehensive_test.py  ui_analysis.py
search/: search_index.json
site/: index.html  sitemap.xml
site/VALIDATION/: index.html
site/getting-started/: index.html
site/search/: search_index.json
src/: __init__.py
src/core/: __init__.py  aero.py  analysis.py  chemistry.py  constants.py  cooling.py  environment.py  flight.py  flight_6dof.py  geometry.py  instability.py  integrators.py  materials.py  materials_airframe.py  math_utils.py  mission.py  moc_solver.py  monte_carlo.py  optimization.py  optimizer.py  presets.py  project_manager.py  project_manager_v3.py  propulsion.py  recovery.py  rocket.py  rocket_engine.py  rocket_geometry.py  shifting_equilibrium.py  staging.py  terrain.py  thermodynamics.py  types.py  units.py  validation.py
src/data/: __init__.py  propellant_presets.py
src/ui/: __init__.py  splash_screen.py  tutorial_overlay.py  workers.py
src/ui/viz/: __init__.py  plume_render.py
src/ui/widgets/: __init__.py  advanced_engineering.py  cooling_widget.py  graph_widget.py  input_panel.py  mission_widget.py  optimization_widget.py  propellant_editor.py  propellant_presets_widget.py  staging_widget.py  thermal_widget.py  timeline_scrubber.py  unit_toggle_widget.py  vehicle_widget.py  view3d_widget.py
src/ui/windows/: __init__.py  compare_window.py  main_window.py
src/utils/: __init__.py  export.py  exporter.py  nasa_parser.py  units.py
src/visualization/: __init__.py
tests/: __init__.py  audit_system.py  audit_thermo.py  generate_validation.py  stress_memory.py  stress_physics.py  stress_test_monte_carlo.py  validate_flight.py  verify_2d_physics.py  verify_full_stack.py
tests/unit/: test_boundary_layer.py  test_flight_6dof.py  test_instability.py  test_math_utils.py  test_nasa_parser.py  test_propulsion.py  test_real_gas.py  test_real_gas_corrections.py  test_shifting_equilibrium.py  test_thermo.py  test_validation.py
tests/validation/: __init__.py  test_cea_comparison.py  test_combustion.py
theory/: index.html
user-guide/: index.html
