[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensim"
version = "2.0.0"
description = "EnSim - Professional Rocket Engine & Flight Simulation Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EnSim Contributors", email = "contact@ensim.io"}
]
maintainers = [
    {name = "EnSim Core Team"}
]
keywords = [
    "rocket",
    "propulsion",
    "simulation",
    "aerospace",
    "thermodynamics",
    "NASA CEA",
    "chemical equilibrium",
    "flight dynamics",
    "6-DOF",
    "Monte Carlo",
    "nozzle design"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "numba>=0.57.0",
    "PyQt6>=6.5.0",
    "pyvista>=0.40.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]
all = ["ensim[dev,docs]"]

[project.urls]
Homepage = "https://github.com/SpaceEngineerSS/EnSim"
Documentation = "https://ensim.io/docs"
Repository = "https://github.com/SpaceEngineerSS/EnSim"
Issues = "https://github.com/SpaceEngineerSS/EnSim/issues"
Changelog = "https://github.com/SpaceEngineerSS/EnSim/blob/main/CHANGELOG.md"

[project.scripts]
ensim = "main:main"

[project.gui-scripts]
ensim-gui = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = [
    "*.dat",
    "*.qss",
    "*.png",
    "*.ico",
    "*.svg",
]

# =============================================================================
# Black - Code Formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# =============================================================================
# Ruff - Linter
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S101"]

# =============================================================================
# isort - Import Sorting
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip = [".venv", "build", "dist"]

# =============================================================================
# mypy - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    "venv",
    ".venv",
    "tests",
]

[[tool.mypy.overrides]]
module = "numba.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyvista.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true

# =============================================================================
# pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "validation: marks tests as validation against CEA",
    "gui: marks tests that require GUI",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
# fail_under = 60  # Disabled - coverage will improve over time

# =============================================================================
# Bandit - Security
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]  # assert used as part of tests

